--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "telegram-bot-maker",
+  "name": "mybot",
   "version": "1.0.0",
-  "main": "maker.js",
-  "dependencies": {
-    "telegraf": "^4.16.3",
-    "mongoose": "^8.5.0",
-    "axios": "^1.7.2"
-  },
-  "engines": {
-    "node": "18.x"
-  },
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node maker.js"
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "isgd": "^1.1.3", // Add this line
+    "mongoose": "^8.2.3",
+    "telegraf": "^4.12.2"
   }
 }
