--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "isgd": "^1.1.3", // Add this line
+    "isgd": "^1.1.3",
     "mongoose": "^8.2.3",
     "telegraf": "^4.12.2"
   }
