--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "isgd": "^1.1.3",
     "mongoose": "^8.2.3",
+    "node-fetch": "^3.3.2",
     "telegraf": "^4.12.2"
   }
 }
