--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/t/(.*)",
-      "dest": "/public/t/$1"
+      "src": "/index.html",
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
