--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^1.6.8",
     "isgd": "^1.1.3",
     "mongoose": "^8.2.3",
-    "telegraf": "^4.12.2",
-    "crypto": "^1.0.1"
+    "telegraf": "^4.12.2"
   }
 }
