--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,20 @@
     {
       "src": "created.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "sendMedia.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/created(.*)",
       "dest": "created.js"
+    },
+    {
+      "src": "/api/sendMedia",
+      "dest": "sendMedia.js"
     },
     {
       "src": "/(.*)",
